fix: Lotto 인스턴스 생성 시 예외가 발생하는 오류를 고쳐라